--- a/angular-ecommerce/src/app/layout/navbar/navbar.html
+++ b/angular-ecommerce/src/app/layout/navbar/navbar.html
@@ -1,5 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+<nav
+  class="navbar navbar-expand-lg navbar-light bg-light fixed-top px-4 shadow-sm"
+>
+  <a class="navbar-brand" href="#">AngularLearn</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -33,7 +35,17 @@
     <!-- Right side element -->
     <ul class="navbar-nav ms-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/cart">Cart</a>
+        <a class="nav-link position-relative" routerLink="/cart">
+          <i class="bi bi-cart3" style="font-size: 1.5rem"></i>
+          @if(cartItemCount() > 0) {
+          <span
+            class="position-absolute top-2 start-100 translate-middle badge rounded-pill bg-danger"
+          >
+            {{ cartItemCount() }}
+            <span class="visually-hidden">items in cart</span>
+          </span>
+          }
+        </a>
       </li>
     </ul>
   </div>
