Added home logic and update cart functionality

--- a/angular-ecommerce/src/app/features/home/pages/home-page/home-page.html
+++ b/angular-ecommerce/src/app/features/home/pages/home-page/home-page.html
@@ -15,6 +15,9 @@
 ></app-products-carousel-component>
 
 <!-- Product Grid -->
-<app-product-list-home-component
+<app-product-list-component
   [productList]="productsList()"
-></app-product-list-home-component>
+  (addToCart)="addToCart($event)"
+  (removedFromCart)="removeFromCart($event)"
+  [displaySimpleDetails]="true"
+></app-product-list-component>
