--- a/angular-ecommerce/src/app/features/product/components/product-list-page/product-list-page.html
+++ b/angular-ecommerce/src/app/features/product/components/product-list-page/product-list-page.html
@@ -1,3 +1,5 @@
 <app-product-list-component
   [productList]="products()"
+  (addToCart)="addToCart($event)"
+  (removedFromCart)="removeFromCart($event)"
 ></app-product-list-component>
