--- a/angular-ecommerce/src/app/features/cart/pages/cart-page/cart-page.html
+++ b/angular-ecommerce/src/app/features/cart/pages/cart-page/cart-page.html
@@ -1,1 +1,39 @@
-<p>cart-page works!</p>
+<section>
+  <div class="container mt-3">
+    <h2 class="mb-4">🛒 Your Shopping Cart</h2>
+
+    @if(cartItems().length === 0) {
+    <div class="alert alert-info">Your cart is empty.</div>
+    } @for(item of cartItems(); track item.id) {
+    <div class="card mb-3">
+      <div class="row g-0">
+        <div class="col-md-2">
+          <img
+            [src]="item.image"
+            class="img-fluid rounded-start"
+            alt="{{item.title}}"
+          />
+        </div>
+        <div class="col-md-10">
+          <div class="card-body">
+            <h5 class="card-title">{{ item.title }}</h5>
+            <p class="card-text">{{ item.description }}</p>
+            <p class="card-text"><strong>Price:</strong> ${{ item.price }}</p>
+            <button
+              class="btn btn-outline-danger btn-sm"
+              (click)="removeFromCart(item)"
+            >
+              Remove
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    } @if(cartItems().length > 0) {
+    <div class="text-end mt-3 mb-5">
+      <h4>Total: ${{ getCartTotal() }}</h4>
+      <button class="btn btn-success">Proceed to Checkout</button>
+    </div>
+    }
+  </div>
+</section>
